# tupdate

./: Cargo.toml  README.md
src/: main.rs  patience.rs  update_finder.rs
src/gui/: batch.rs  cocoa.rs  liso.rs  mod.rs
src/gui/cocoa/: alertish.rs
