[package]
name = "tupdate"
description = "Tejat Updater"
version = "0.3.1"
authors = ["Solra Bizna <solra@bizna.name>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SolraBizna/tupdate"

[dependencies]
atty = {version = "0.2", optional = true}
clap = {version = "4.1", features = ["derive", "wrap_help"]}
flate2 = "1.0"
hex = "0.4"
liso = {version = "1.0.2", optional = true}
lsx = {version = "1.1", default-features = false, features = ["sha256"]}
mlua = {version = "0.8.7", features = ["lua54", "vendored"]}
rayon = "1.6"
reqwest = {version = "0.11", features = ["blocking"]}
terminal_size = {version = "0.2.5", optional = true}
tokio = {version = "1", features = ["rt-multi-thread", "io-util", "fs", "parking_lot", "macros"]}
url = "2.3"
wax = "0.5"

[target.'cfg(target_os="macos")'.dependencies]
cacao = {version = "0.3.2", features=["appkit"]}
objc = {version = "0.2"}
objc_id = {version = "0.1"}

[features]
default = ["gui_liso"]
gui_liso = ["atty", "liso", "terminal_size"]
force_default_pause = []
